<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Receitas</string>
    <string name="action_settings">Settings</string>
    <string name="activity1_button">Adicionar Receita</string>
    <string name="activity2_button">Ver Receitas</string>
    
    <string name="add_recipe_label">Adicionar Receita</string>
    <string name="recipe_name_hint">Nome</string>
    <string name="ingredients_hint">Digite aqui os ingredientes da receita</string>
    <string name="add_recipe_button">Adicionar</string>
    <string name="recipe_name_label">Nome da Receita:</string>
    <string name="ingredients_label">Ingredientes:</string>
    
    <string name="list_recipes_label">Listar Receitas</string>
    
    

</resources>